# compiler

./: CMakeLists.txt  Makefile  README.md  ast.c  ast.h  ast_flow.c  ast_flow.h  ast_functions.c  ast_nodes.c  ast_nodes.h  functions.c  parser.y  symbol_table.c  symbol_table.h  token.c  tokenizer.lex  type_check.c  types.c
include/: ast.h  ast_flow.h  ast_functions.h  ast_nodes.h  functions.h  type_check.h  types.h
include/types/: type_check.h  types.h
include/x86/: closure.h  gen_asm.h  opcodes.h
include/x86/types/: int.h  pointer.h
x86/: closure.c  gen_asm.c  gen_asm.h  opcodes.h
x86/types/: int.c  pointer.c
